objects/User_Home__dll.object
<CustomObject>
    <fields>
        <fullName>AboutMe__c</fullName>
        <label>About Me</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountId__c</fullName>
        <label>Account ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alias__c</fullName>
        <label>Alias</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BadgeText__c</fullName>
        <label>User Photo badge text overlay</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BannerPhotoUrl__c</fullName>
        <label>Url for banner photo</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CallCenterId__c</fullName>
        <label>Call Center ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CommunityNickname__c</fullName>
        <label>Nickname</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyName__c</fullName>
        <label>Company Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContactId__c</fullName>
        <label>Contact ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedById__c</fullName>
        <label>Created By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate__c</fullName>
        <label>Created Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DataSourceObject__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DataSource__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DefaultGroupNotificationFrequency__c</fullName>
        <label>Default Notf Freq when Joining Groups</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DelegatedApproverId__c</fullName>
        <label>Delegated Approver ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DigestFrequency__c</fullName>
        <label>Chatter Email Highlights Frequency</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Division__c</fullName>
        <label>Division</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailEncodingKey__c</fullName>
        <label>Email Encoding</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailPreferencesAutoBccStayInTouch__c</fullName>
        <label>AutoBccStayInTouch</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailPreferencesAutoBcc__c</fullName>
        <label>AutoBcc</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmailPreferencesStayInTouchReminder__c</fullName>
        <label>StayInTouchReminder</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EmployeeNumber__c</fullName>
        <label>Employee Number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Extension__c</fullName>
        <label>Extension</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FederationIdentifier__c</fullName>
        <label>SAML Federation ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ForecastEnabled__c</fullName>
        <label>Allow Forecasting</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FullPhotoUrl__c</fullName>
        <label>Url for full-sized Photo</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GeocodeAccuracy__c</fullName>
        <label>Geocode Accuracy</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Id__c</fullName>
        <label>User ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsActive__c</fullName>
        <label>Active</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsExtIndicatorVisible__c</fullName>
        <label>Show external indicator</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsProfilePhotoActive__c</fullName>
        <label>Has Profile Photo</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KQ_Id__c</fullName>
        <label>KQ_Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LanguageLocaleKey__c</fullName>
        <label>Language</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastLoginDate__c</fullName>
        <label>Last Login</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedById__c</fullName>
        <label>Last Modified By ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate__c</fullName>
        <label>Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate__c</fullName>
        <label>Last Referenced Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate__c</fullName>
        <label>Last Viewed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latitude__c</fullName>
        <label>Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LocaleSidKey__c</fullName>
        <label>Locale</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Longitude__c</fullName>
        <label>Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ManagerId__c</fullName>
        <label>Manager ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MediumBannerPhotoUrl__c</fullName>
        <label>Url for Android banner photo</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MediumPhotoUrl__c</fullName>
        <label>Url for medium profile photo</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MobilePhone__c</fullName>
        <label>Mobile</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Full Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfflinePdaTrialExpirationDate__c</fullName>
        <label>Sales Anywhere Trial Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OfflineTrialExpirationDate__c</fullName>
        <label>Offline Edition Trial Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>OutOfOfficeMessage__c</fullName>
        <label>Out of office message</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PostalCode__c</fullName>
        <label>Zip/Postal Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceivesAdminInfoEmails__c</fullName>
        <label>Admin Info Emails</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReceivesInfoEmails__c</fullName>
        <label>Info Emails</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SenderEmail__c</fullName>
        <label>Email Sender Address</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SenderName__c</fullName>
        <label>Email Sender Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SfdcOrganizationId__c</fullName>
        <label>SfdcOrganizationId</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Signature__c</fullName>
        <label>Email Signature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmallBannerPhotoUrl__c</fullName>
        <label>Url for IOS banner photo</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SmallPhotoUrl__c</fullName>
        <label>Photo</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StayInTouchNote__c</fullName>
        <label>Stay-in-Touch Email Note</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StayInTouchSignature__c</fullName>
        <label>Stay-in-Touch Email Signature</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StayInTouchSubject__c</fullName>
        <label>Stay-in-Touch Email Subject</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SystemModstamp__c</fullName>
        <label>System Modstamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>TimeZoneSidKey__c</fullName>
        <label>Time Zone</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPermissionsCallCenterAutoLogin__c</fullName>
        <label>Auto-login To Call Center</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPermissionsInteractionUser__c</fullName>
        <label>Flow User</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPermissionsKnowledgeUser__c</fullName>
        <label>Knowledge User</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPermissionsMarketingUser__c</fullName>
        <label>Marketing User</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPermissionsOfflineUser__c</fullName>
        <label>Offline User</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPermissionsSFContentUser__c</fullName>
        <label>Salesforce CRM Content User</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPermissionsSupportUser__c</fullName>
        <label>Service Cloud User</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesActivityRemindersPopup__c</fullName>
        <label>ActivityRemindersPopup</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesCacheDiagnostics__c</fullName>
        <label>CacheDiagnostics</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesContentEmailAsAndWhen__c</fullName>
        <label>ContentEmailAsAndWhen</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesContentNoEmail__c</fullName>
        <label>ContentNoEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesCreateLEXAppsWTShown__c</fullName>
        <label>CreateLEXAppsWTShown</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisCommentAfterLikeEmail__c</fullName>
        <label>DisCommentAfterLikeEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisMentionsCommentEmail__c</fullName>
        <label>DisMentionsCommentEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisProfPostCommentEmail__c</fullName>
        <label>DisProfPostCommentEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableAllFeedsEmail__c</fullName>
        <label>DisableAllFeedsEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableBookmarkEmail__c</fullName>
        <label>DisableBookmarkEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableChangeCommentEmail__c</fullName>
        <label>DisableChangeCommentEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableEndorsementEmail__c</fullName>
        <label>DisableEndorsementEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableFileShareNotificat__c</fullName>
        <label>DisableFileShareNotificationsForApi</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableFollowersEmail__c</fullName>
        <label>DisableFollowersEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableLaterCommentEmail__c</fullName>
        <label>DisableLaterCommentEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableLikeEmail__c</fullName>
        <label>DisableLikeEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableMentionsPostEmail__c</fullName>
        <label>DisableMentionsPostEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableMessageEmail__c</fullName>
        <label>DisableMessageEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableProfilePostEmail__c</fullName>
        <label>DisableProfilePostEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesDisableSharePostEmail__c</fullName>
        <label>DisableSharePostEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesEnableAutoSubForFeeds__c</fullName>
        <label>EnableAutoSubForFeeds</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesEventRemindersCheckboxDef__c</fullName>
        <label>EventRemindersCheckboxDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesExcludeMailAppAttachments__c</fullName>
        <label>ExcludeMailAppAttachments</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesFavoritesShowTopFavorites__c</fullName>
        <label>FavoritesShowTopFavorites</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesFavoritesWTShown__c</fullName>
        <label>FavoritesWTShown</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesGlobalNavBarWTShown__c</fullName>
        <label>GlobalNavBarWTShown</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesGlobalNavGridMenuWTShown__c</fullName>
        <label>GlobalNavGridMenuWTShown</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHasCelebrationBadge__c</fullName>
        <label>HasCelebrationBadge</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHasSentWarningEmail238__c</fullName>
        <label>HasSentWarningEmail238</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHasSentWarningEmail240__c</fullName>
        <label>HasSentWarningEmail240</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHasSentWarningEmail__c</fullName>
        <label>HasSentWarningEmail</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideBiggerPhotoCallout__c</fullName>
        <label>HideBiggerPhotoCallout</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideCSNDesktopTask__c</fullName>
        <label>HideCSNDesktopTask</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideCSNGetChatterMobileTa__c</fullName>
        <label>HideCSNGetChatterMobileTask</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideChatterOnboardingSpla__c</fullName>
        <label>HideChatterOnboardingSplash</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideEndUserOnboardingAssi__c</fullName>
        <label>HideEndUserOnboardingAssistantModal</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideLightningMigrationMod__c</fullName>
        <label>HideLightningMigrationModal</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideS1BrowserUI__c</fullName>
        <label>HideS1BrowserUI</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideSecondChatterOnboardi__c</fullName>
        <label>HideSecondChatterOnboardingSplash</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesHideSfxWelcomeMat__c</fullName>
        <label>HideSfxWelcomeMat</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesLightningExperiencePrefer__c</fullName>
        <label>LightningExperiencePreferred</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesPathAssistantCollapsed__c</fullName>
        <label>PathAssistantCollapsed</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesPreviewCustomTheme__c</fullName>
        <label>PreviewCustomTheme</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesRecordHomeReservedWTShown__c</fullName>
        <label>RecordHomeReservedWTShown</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesRecordHomeSectionCollapse__c</fullName>
        <label>RecordHomeSectionCollapseWTShown</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesReminderSoundOff__c</fullName>
        <label>ReminderSoundOff</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesSRHOverrideActivities__c</fullName>
        <label>SRHOverrideActivities</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowCityToExternalUsers__c</fullName>
        <label>ShowCityToExternalUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowCityToGuestUsers__c</fullName>
        <label>ShowCityToGuestUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowCountryToExternalUser__c</fullName>
        <label>ShowCountryToExternalUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowCountryToGuestUsers__c</fullName>
        <label>ShowCountryToGuestUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowEmailToExternalUsers__c</fullName>
        <label>ShowEmailToExternalUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowEmailToGuestUsers__c</fullName>
        <label>ShowEmailToGuestUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowFaxToExternalUsers__c</fullName>
        <label>ShowFaxToExternalUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowFaxToGuestUsers__c</fullName>
        <label>ShowFaxToGuestUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowForecastingChangeSign__c</fullName>
        <label>ShowForecastingChangeSignals</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowManagerToExternalUser__c</fullName>
        <label>ShowManagerToExternalUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowManagerToGuestUsers__c</fullName>
        <label>ShowManagerToGuestUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowMobilePhoneToExternal__c</fullName>
        <label>ShowMobilePhoneToExternalUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowMobilePhoneToGuestUse__c</fullName>
        <label>ShowMobilePhoneToGuestUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowPostalCodeToExternalU__c</fullName>
        <label>ShowPostalCodeToExternalUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowPostalCodeToGuestUser__c</fullName>
        <label>ShowPostalCodeToGuestUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowProfilePicToGuestUser__c</fullName>
        <label>ShowProfilePicToGuestUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowStateToExternalUsers__c</fullName>
        <label>ShowStateToExternalUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowStateToGuestUsers__c</fullName>
        <label>ShowStateToGuestUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowStreetAddressToExtern__c</fullName>
        <label>ShowStreetAddressToExternalUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowStreetAddressToGuestU__c</fullName>
        <label>ShowStreetAddressToGuestUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowTitleToExternalUsers__c</fullName>
        <label>ShowTitleToExternalUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowTitleToGuestUsers__c</fullName>
        <label>ShowTitleToGuestUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowWorkPhoneToExternalUs__c</fullName>
        <label>ShowWorkPhoneToExternalUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesShowWorkPhoneToGuestUsers__c</fullName>
        <label>ShowWorkPhoneToGuestUsers</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesSortFeedByComment__c</fullName>
        <label>SortFeedByComment</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesSuppressEventSFXReminders__c</fullName>
        <label>SuppressEventSFXReminders</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesSuppressTaskSFXReminders__c</fullName>
        <label>SuppressTaskSFXReminders</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesTaskRemindersCheckboxDefa__c</fullName>
        <label>TaskRemindersCheckboxDefault</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserPreferencesUserDebugModePref__c</fullName>
        <label>UserDebugModePref</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserRoleId__c</fullName>
        <label>Role ID</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UserType__c</fullName>
        <label>User Type</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cdp_sys_SourceVersion__c</fullName>
        <label>cdp_sys_SourceVersion</label>
        <length>60</length>
        <type>Text</type>
    </fields>
</CustomObject>